--- a/www/_globals.scss
+++ b/www/_globals.scss
@@ -13,3 +13,15 @@
 .pointer {
 	cursor: pointer;
 }
+
+.text {
+	&-left {
+		text-align: left;
+	}
+	&-right {
+		text-align: right;
+	}
+	&-center {
+		text-align: center;
+	}
+}
