--- a/www/js/controllers/home/home.scss
+++ b/www/js/controllers/home/home.scss
@@ -139,6 +139,7 @@
 	  left: 0;
 	  right: 0;
 	  background-color: rgba(0, 0, 0, 0.85);
+	  z-index: 10;
 
 		li.selected {
 			color: white;
@@ -219,6 +220,68 @@
 	}
 }
 
+// card flip
+/* entire container, keeps perspective */
+.flip-container {
+	height: 100%;
+	perspective: 1000px;
+}
+
+// .flip-container, .front, .back {
+// 	width: 100%;
+// 	height: 60%;
+// }
+
+.flip-container.flipped .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
+	transform: rotateY(180deg);
+}
+
+/* flip speed goes here */
+.flipper {
+	height: 100%;
+	transition: 0.6s;
+	transform-style: preserve-3d;
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	position: absolute;
+	top: 50%;
+	left: 0;
+	transform: translateY( -50% );
+	backface-visibility: hidden;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: translateY( -50% ) rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: translateY( -50% ) rotateY(180deg);
+}
+
+.back {
+	p {
+		font-size: 0.7em;
+	}
+}
+
+.table {
+	font-size: 0.8em;
+	tbody {
+		tr {
+			td {
+				padding: 4px;
+			}
+		}
+	}
+}
+
 #fixed-bg {
 	position: fixed;
 	z-index: -2;
@@ -245,6 +308,9 @@
 
 .stay-wrapper {
 	background-image: url( '../../../../assets/images/bg-3.jpg' );
+	.info {
+		padding: 40px;
+	}
 }
 
 .irvine-wrapper {
