--- a/www/js/partials/_when-where.html
+++ b/www/js/partials/_when-where.html
@@ -10,12 +10,12 @@
 					Mr. David Tanimoto and Mrs. Joyce Tanimoto
 				</p>
 
-				<h5>
+				<h3>
 					Paige Hirayama and Jared Tanimoto
-				</h5>
+				</h3>
 
 				<p>
-					Invite you to share the breathtaking views of the Sierras and unforgettable memories of their destination wedding to take places on
+					Invite you to share the breathtaking views of the Sierras and <br> unforgettable memories of their destination wedding to take places on
 				</p>
 
 				<p>
@@ -29,12 +29,13 @@
 				</p>
 					<!-- (*maybe include a google maps embed api?)
 					(*i’m planning to update the website later to give instructions on how to take the gondola up to the venue) -->
-				<iframe
-				  width="{{ window.innerWidth * .25 }}vw"
-				  height="{{ window.innerWidth * .1875 }}vw"
+				<div class="map-overlay" onClick="style.pointerEvents='none'"></div>
+				<iframe class="map"
+				  width="300px"
+				  height="150px"
 				  frameborder="0" style="border:0"
 				  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDDoWSwwclwxW9-vTj7WqOG5kxq1tglkuQ
-				    &q=10001 Minaret Rd, Mammoth Lakes, CA 93546" allowfullscreen>
+				    &q=McCoy Station, Mammoth Lakes, CA 93546" allowfullscreen>
 				</iframe>
 			</div>
 	</div>
