--- a/www/js/partials/_irvine.html
+++ b/www/js/partials/_irvine.html
@@ -8,9 +8,10 @@
 					Please keep <strong>September 9th, 2017</strong> available as we would love to celebrate once again with you all. <br />
 					Details to come soon.
 				</p>
+				<div class="map-overlay" onClick="style.pointerEvents='none'"></div>
 				<iframe
-				  width="{{ window.innerWidth * .3 }}vw"
-				  height="{{ window.innerWidth * .225 }}vw"
+				  width="400px"
+				  height="200px"
 				  frameborder="0" style="border:0"
 				  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDDoWSwwclwxW9-vTj7WqOG5kxq1tglkuQ
 				    &q=Tanaka Farms Irvine, CA" allowfullscreen>
