--- a/www/js/partials/_stay.html
+++ b/www/js/partials/_stay.html
@@ -13,7 +13,7 @@
 								We have negotiated a number of rooms at The Mammoth Mountain Inn for very affordable rates.  Due to the location of the wedding, we have chosen The Mammoth Mountain Inn as our preferred venue as it is the closest hotel to the venue.  The hotel is adjacent to the gondola station at Main Lodge where you will be transported to the ceremony and reception venue.  Although we have negotiated rates on a number of rooms, until payment has been put against a room, they will be available to be booked by the public.  Please note that the hotel typically books up far in advance due to its popular location.   We recommend you to book now even if you’re not absolutely sure if you can make it, as the resort offers free cancellation up to 48 hours prior to your arrival.  (Please book soon!) All you have to do is call The Mammoth Mountain Inn at (760) 934-2581 and mention the appropriate booking reference number listed below.<br />
 								For more information, please visit: <a href="//themammothmountaininn.com">Mammoth Mountain</a>
 							</p>
-							<a href="" ng-click="onToggleFlip( link )">Click for Hotel Information</a>
+							<a href="" ng-click="onToggleFlip( link )">Click for Hotel Rates</a>
 						</div>
 					</div>
 				</div>
@@ -88,7 +88,7 @@
 							<table class="table table-hover table-striped">
 								<thead>
 									<tr>
-										<th>Mammoth Mountain Inn</th>
+										<th>The Village at Mammoth</th>
 										<th>Room Code</th>
 										<th>Max Occ.</th>
 										<th>Nightly Room Rate (Sun-Thur)</th>
