--- a/www/js/partials/_when-where.html
+++ b/www/js/partials/_when-where.html
@@ -15,7 +15,7 @@
 				</h3>
 
 				<p>
-					Invite you to share the breathtaking views of the Sierras and <br> unforgettable memories of their destination wedding to take places on
+					Invite you to share the breathtaking views of the Sierras and <br> unforgettable memories of their destination wedding to take place on
 				</p>
 
 				<p>
