--- a/www/js/controllers/home/home.scss
+++ b/www/js/controllers/home/home.scss
@@ -1,4 +1,7 @@
 @import "../../../_globals.scss";
+$dir: '../../../../assets';
+/* $images: $dir + '/images'; */
+$images: $dir + '/images_optimized';
 
 #jp {
 	#content {
@@ -21,7 +24,7 @@
 
 	height: 200px;
 	width: 200px;
-	background: url( '../../../../assets/gondola/gondola-copy.svg' );
+	background: url( $dir + '/gondola/gondola-copy.svg' );
 
   // animation-name: swing;
   animation-duration: 4s;
@@ -31,17 +34,17 @@
 
 #mountain1 {
 	left: 40%;
-	background: url( '../../../../assets/mountains/middle-mountain.svg' );
+	background: url( $dir + '/mountains/middle-mountain.svg' );
 }
 
 #mountain2 {
 	left: 5vw;
-	background: url( '../../../../assets/mountains/left-mountain.svg' );
+	background: url( $dir + '/mountains/left-mountain.svg' );
 }
 
 #mountain3 {
 	right: 5vw;
-	background: url( '../../../../assets/mountains/right-mountain.svg' );
+	background: url( $dir + '/mountains/right-mountain.svg' );
 }
 
 .sky {
@@ -297,7 +300,7 @@ h2 {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-image: url( '../../../../assets/images/mammoth2.jpg' );
+	background-image: url( $dir + $images + '/mammoth2.jpg' );
 }
 
 .background-image {
@@ -306,11 +309,11 @@ h2 {
 }
 
 .hello-wrapper {
-	background-image: url( '../../../../assets/images/mammoth1.jpg' );
+	background-image: url( $dir + $images + '/mammoth1.jpg' );
 }
 
 .when-where-wrapper {
-	background-image: url( '../../../../assets/images/mammoth2.jpg' );
+	background-image: url( $dir + $images + '/mammoth2.jpg' );
 	line-height: 1.2;
 	.map-overlay {
 		width: 300px;
@@ -324,14 +327,14 @@ h2 {
 }
 
 .stay-wrapper {
-	background-image: url( '../../../../assets/images/mammoth3.jpg' );
+	background-image: url( $dir + $images + '/mammoth3.jpg' );
 	.info {
 		padding: 40px;
 	}
 }
 
 .irvine-wrapper {
-	background-image: url( '../../../../assets/images/mammoth4.jpg' );
+	background-image: url( $dir + $images + '/mammoth4.jpg' );
 	.map-overlay {
 		width: 400px;
 		height: 200px; /* your iframe height */
@@ -341,15 +344,15 @@ h2 {
 }
 
 .journey-wrapper {
-	background-image: url( '../../../../assets/images/mammoth7.jpg' );
+	background-image: url( $dir + $images + '/mammoth7.jpg' );
 }
 
 .registry-wrapper {
-	background-image: url( '../../../../assets/images/mammoth5.jpg' );
+	background-image: url( $dir + $images + '/mammoth5.jpg' );
 }
 
 .rsvp-wrapper {
-	background-image: url( '../../../../assets/images/mammoth6.jpg' );
+	background-image: url( $dir + $images + '/mammoth6.jpg' );
 }
 
 .background-alternate:nth-child( 2n ) {
