--- a/www/js/controllers/admin/admin.scss
+++ b/www/js/controllers/admin/admin.scss
@@ -4,6 +4,7 @@ $dir: '../../../../assets';
 $images: $dir + '/images_optimized';
 
 #admin {
+	background-color: white;
 	box-sizing: border-box;
 	padding: 0 10%;
 	width: 100%;
@@ -11,7 +12,8 @@ $images: $dir + '/images_optimized';
 	.admin-banner {
 		h1 {
 			text-align: center;
-			margin: 5%;
+			box-sizing: border-box;
+			padding: 5%;
 		}
 	}
 
@@ -39,6 +41,18 @@ $images: $dir + '/images_optimized';
 				transform: scale(1.25);
 			}
 		}
+	}
+
+	label {
+		margin-bottom: 0;
+		margin-top: 8px;
+		padding-left: 1px;
+	}
+
+	input[type='checkbox'] {
+		box-shadow: none;
+		margin: 0;
+		height: 24px;
 	}
 
 	td {
