--- a/www/js/controllers/home/home.scss
+++ b/www/js/controllers/home/home.scss
@@ -2,6 +2,10 @@
 $dir: '../../../../assets';
 /* $images: $dir + '/images'; */
 $images: $dir + '/images_optimized';
+/*
+body {
+	background-color: skyblue;
+} */
 
 #jp {
 	#content {
@@ -19,8 +23,6 @@ $images: $dir + '/images_optimized';
 	position: fixed;
 	bottom: 10%;
 	left: 45%;
-	// background-color: fuchsia;
-	// outline: 1px solid orange;
 
 	height: 200px;
 	width: 200px;
@@ -353,6 +355,25 @@ h2 {
 
 .rsvp-wrapper {
 	background-image: url( $dir + $images + '/mammoth6.jpg' );
+	.front {
+		transform: translate(-50%, -50%) rotateY(0);
+	}
+	.back {
+		transform: translate(-50%, -50%) rotateY(180deg);
+	}
+	.front, .back {
+		width: 80%;
+		left: 50%;
+	}
+
+	.form-control {
+		width: 50%;
+		transform: translateX(50%);
+	}
+
+	select.has-error {
+		border: 1px solid red;
+	}
 }
 
 .background-alternate:nth-child( 2n ) {
