--- a/www/js/controllers/home/home.scss
+++ b/www/js/controllers/home/home.scss
@@ -84,7 +84,7 @@ body {
 
 
 .banner {
-	width: 100vw;
+	width: 100%;
 	height: 92vh;
 }
 
@@ -102,17 +102,20 @@ body {
 
 	#paige {
 		position: absolute;
+		transition: all 0.2s linear;
 		top: 0;
 		left: 5vw;
 	}
 	#and {
 		position: absolute;
+		transition: all 0.2s linear;
 		top: 50%;
 		left: 50%;
 		transform: rotate( -15deg ) translate( -50%, -50% );
 	}
 	#jared {
 		position: absolute;
+		transition: all 0.2s linear;
 		right: 5vw;
 		bottom: 0;
 	}
@@ -411,7 +414,7 @@ h2 {
 
 
 .screen-size {
-	width: 100vw;
+	width: 100%;
 	height: 92vh;
 }
 
