saving before losing this computer

--- a/www/js/partials/_rsvp.html
+++ b/www/js/partials/_rsvp.html
@@ -114,7 +114,7 @@
 												<option value="">Please Choose a Dish</option>
 											</select>
 										</div>
-										<div class="form-group" ng-if="guest.Guest">
+										<div class="form-group left-label-right-form width-50" ng-if="guest.Guest">
 											<label>
 												{{ guest.Guest.FirstName +' '+ guest.Guest.LastName }}
 											</label>
